--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -2,12 +2,11 @@ vich_uploader:
     db_driver: orm
 
     mappings:
-        product_image:
-            uri_prefix: /img/products
-            upload_destination: '%kernel.project_dir%/public/img/products'
+        article_image:
+            uri_prefix: /img/articles
+            upload_destination: '%kernel.project_dir%/public/img/articles'
             namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
 
             inject_on_load: false
             delete_on_update: true
             delete_on_remove: true
-
