--- a/.env
+++ b/.env
@@ -29,6 +29,10 @@ APP_SECRET=328729c2b9b1e4f4107b27f9136f8c05
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+
+# Online database
+#DATABASE_URL=mysql://dbu496602:0622178800-Yb@db5000503264.hosting-data.io:3306/dbs483060
+
 DATABASE_URL=mysql://root:@127.0.0.1:3306/p5_ALGERdiscoveRIE
 ###< doctrine/doctrine-bundle ###
 
@@ -36,5 +40,5 @@ DATABASE_URL=mysql://root:@127.0.0.1:3306/p5_ALGERdiscoveRIE
 # For Gmail as a transport, use: "gmail://username:password@localhost"
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
-MAILER_URL=null://localhost
+MAILER_URL=smtp://smtp.ionos.fr:587?encryption=ssl&auth_mode=alger.discoverie@webagencypro.fr&password=0622178800-Yb
 ###< symfony/swiftmailer-bundle ###
